# INR-Sparse-CT-Reconstruction

./: .gitignore  DEPENDENCIES.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: single_nodule_visuals.ipynb  supplementary_analysis.ipynb
scripts/: SIREN_inference.py  SIREN_train_nodule.py  evaluate_full_volume_radiometrics.py  evaluate_intra_tumour_radiometrics.py  evaluate_pred_masks.py  evaluate_propagated_masks.py  extract_nodules.py  frequency_analysis_full_volume.py  frequency_analysis_intra_tumour.py  generate_roi_masks.py  geometric_analysis_voxel_expansion.py  interpolation_run.py  predict_dense_regions.py  propagate_mask.py  propagate_simple_gen-eval.py  run_SIREN.sh
tests/: conftest.py  test_data_loader.py  test_metrics.py  test_models.py
tumour_tomography/: SIREN_training.py  __init__.py  config.py  data_loader.py  geometric_metrics.py  interpolation.py  models.py  processor.py  radiometric_metrics.py
